--- a/src/less/index.less
+++ b/src/less/index.less
@@ -49,7 +49,6 @@
 @import "elements/callout.less";
 @import "elements/checkList.less";
 @import "elements/code.less";
-@import "elements/console.less";
 @import "elements/countdown.less";
 @import "elements/customCheckbox.less";
 @import "elements/customRadiobutton.less";
@@ -69,6 +68,7 @@
 @import "elements/link.less";
 @import "elements/linkList.less";
 @import "elements/loading.less";
+@import "elements/log.less";
 @import "elements/mainMenu.less";
 @import "elements/menu.less";
 @import "elements/modal.less";
