--- a/src/less/elements/log.less
+++ b/src/less/elements/log.less
@@ -1,28 +1,16 @@
-/** console.less */
+/** log.less */
 
 // block
 // =====
 
-.console {
+.log {
     
     .mixin-defaultBorderRadius;
     background: #111;
-    bottom: 2rem;
     color: #690;
-    height: 5rem;
+    height: 20rem;
     overflow: hidden;
-    position: fixed;
-    right: 2rem;
-    transition: height 200ms ease-out;
-    width: 33.3%;
-    z-index: 999;
-    
-    // padding: 1.5rem 4rem 1.5rem 1.5rem;
-    
-    
-    &:hover {
-        height: 30rem;
-    }
+    position: relative;
     
     // "cursor" (just for fun)
     
@@ -30,7 +18,7 @@
         animation-duration: 1s;
         animation-fill-mode: both;
         animation-iteration-count: infinite;
-        animation-name: yoi-consoleCursor;
+        animation-name: yoi-logCursor;
         animation-timing-function: ease-out;
         background: #690;
         content: ' ';
@@ -47,7 +35,7 @@
 // elements
 // ========
 
-.console__body {
+.log__body {
     bottom: 1.5rem;
     font-family: Consolas, Monaco, 'Andale Mono', monospace;
     font-size: 1.2em;
@@ -60,12 +48,12 @@
     top: 1rem;
 }
 
-.console__label {
+.log__label {
     color: #666;
     margin-right: 1rem;
 }
 
-.console .btnDismiss {
+.log .btnDismiss {
     
     position: absolute;
     top: 1rem;
@@ -77,9 +65,50 @@
     
 }
 
+// modifiers
+// =========
+
+.log--tl,
+.log--tr,
+.log--br,
+.log--bl {
+    
+    min-width: 30rem;
+    position: fixed;
+    width: 33.3%;
+    height: 5rem;
+    transition: height 200ms ease-out;
+    z-index: 999;
+    
+    &:hover {
+        height: 30rem;
+    }
+    
+}
+
+.log--tl {
+    left: 2rem;
+    top: 2rem;
+}
+
+.log--tr {
+    right: 2rem;
+    top: 2rem;
+}
+
+.log--br {
+    bottom: 2rem;
+    right: 2rem;
+}
+
+.log--bl {
+    bottom: 2rem;
+    left: 2rem;
+}
+
 // keyframes
 
-@keyframes yoi-consoleCursor {
+@keyframes yoi-logCursor {
     0% {
         animation-timing-function: ease-in;
         opacity: 1;
