--- a/src/less/elements/box.less
+++ b/src/less/elements/box.less
@@ -12,8 +12,9 @@
     box-sizing: border-box;
     display: block;
     font-family: @font-sansserif;
-    overflow: hidden;
     position: relative;
+    
+    //overflow: hidden;
 
     a& {
         text-decoration: none;
