--- a/src/less/elements/slider.less
+++ b/src/less/elements/slider.less
@@ -124,13 +124,14 @@
     }
 
     .pageBtns {
-        border-radius: 0;
-        width: 26rem;
-        bottom: 1rem;
-        top: auto;
         background: transparent;
+        border-radius: 0;
+        bottom: 1rem;
+        left: auto;
         position: absolute;
         right: 1rem;
+        top: auto;
+        width: 26rem;
         z-index: 2;
     }
 
