--- a/src/less/elements/iconMenu.less
+++ b/src/less/elements/iconMenu.less
@@ -25,11 +25,13 @@
 
 .iconMenu__link {
     
-    &, &:link {
+    display: block;
+    font-size: 2rem;
+    padding: 2rem 1.5rem 2rem 5rem;
+    text-decoration: none;
+    
+    &:link, &:visited {
         color: @color-main-10;
-        display: block;
-        font-size: 2rem;
-        padding: 2rem 1.5rem 2rem 5rem;
         text-decoration: none;
     }
     
