--- a/src/less/elements/rating.less
+++ b/src/less/elements/rating.less
@@ -53,6 +53,12 @@
         background-image: url(~'http://@{cdnDomain}/svg.php?id=icon-039&f=@{inactiveStarColor}&w=@{relativeSize}&h=@{relativeSize}');
         right: 0;
     }
+    
+    // default "zero" rating
+    
+    &::after {
+        width: 5 * 3.2rem;
+    }
 
 }
 
