--- a/src/less/utilities/interface.less
+++ b/src/less/utilities/interface.less
@@ -42,6 +42,11 @@
 
 .slct-none { .mixin-userSelectNone !important; }
 
+// pointer events
+
+.pntr-auto { pointer-events: auto !important; }
+.pntr-none { pointer-events: none !important; }
+
 // scroll
 
 .scrl-x { overflow: hidden !important; overflow-x: auto !important; }
