--- a/src/less/elements/menu.less
+++ b/src/less/elements/menu.less
@@ -35,6 +35,7 @@
     &:active,
     &:link,
     &:visited {
+        color: @textColor;
         text-decoration: none;
     }
 
@@ -124,4 +125,20 @@
 .menu--pointRight .is--active::after {
     right: 0;
     transform: translate(50% ,-50%) rotate(45deg);
+}
+
+.menu--pointLeft .menu__link,
+.menu--pointRight .menu__link {
+
+    &,
+    &:active,
+    &:link,
+    &:visited {
+        color: @textColor;
+    }
+    
+    &.is--active {
+        color: @color-white;
+    }
+
 }
