--- a/src/less/elements/quotation.less
+++ b/src/less/elements/quotation.less
@@ -12,6 +12,10 @@
     p {
         margin: 0;
     }
+    
+    p + p {
+        margin-top: 1.5rem;
+    }
 
     &:after {
         color: @color-main-22;
