--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -10,7 +10,7 @@
         <link href="{{ site.github.url }}/css/documentation.css" rel="stylesheet" />
         <link href="{{ site.github.url }}/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     </head>
-    <body class="noJs" yoi-environment="desktop">
+    <body class="noJs" yoi-environment="desktop" yoi-pagerewind>
         <script>document.body.className='js';</script>
         <div class="center grid-flex p-t-10">
             <!-- header -->
