--- a/src/less/elements/stepper.less
+++ b/src/less/elements/stepper.less
@@ -17,7 +17,7 @@
     height: 4rem;
     margin: 0;
     position: relative;
-
+    
     &:hover {
         background: linear-gradient(to bottom, @color-main-10, @color-main-8);
         border-color: @color-main-5;
@@ -97,7 +97,7 @@
 
     // hidden label
 
-    &.stepper__submit--hidden {
+    &.is--invisible {
         opacity: 0;
         overflow: hidden;
         padding: 0;
