--- a/src/less/index.less
+++ b/src/less/index.less
@@ -67,7 +67,6 @@
 @import "elements/imgMagnifier.less";
 @import "elements/link.less";
 @import "elements/linkList.less";
-@import "elements/loading.less";
 @import "elements/log.less";
 @import "elements/mainMenu.less";
 @import "elements/menu.less";
@@ -91,7 +90,7 @@
 @import "elements/searchPrompt.less";
 @import "elements/shelf.less";
 @import "elements/slider.less";
-@import "elements/specialLinks.less";
+@import "elements/spinner.less";
 @import "elements/stepCrumb.less";
 @import "elements/stepMenu.less";
 @import "elements/stepper.less";
