--- a/src/less/core/debug.less
+++ b/src/less/core/debug.less
@@ -144,9 +144,9 @@ body::after when (@broadCastActiveMediaqueryToJs = true) {
 body::after when (@debugMediaquery = true) {
     
     .mixin-defaultBorderRadius;
-    background: #111;
+    background-color: @gray-2;
     bottom: 2rem;
-    color: #690;
+    color: @gray-20;
     font-family: Consolas, Monaco, 'Andale Mono', monospace;
     font-size: 1.2em;
     height: 5rem;
