--- a/src/less/utilities/typography.less
+++ b/src/less/utilities/typography.less
@@ -38,8 +38,9 @@
 
 // font family
 
-.ff-sr { font-family: @font-serif !important; }
-.ff-ss { font-family: @font-sansserif !important; }
+.ff-sr   { font-family: @font-serif !important; }
+.ff-ss   { font-family: @font-sansserif !important; }
+.ff-mono { font-family: @font-mono !important; }
 
 // font weight
 
