--- a/src/less/index.less
+++ b/src/less/index.less
@@ -45,7 +45,7 @@
 @import "elements/box.less";
 @import "elements/breadcrumbs.less";
 @import "elements/btnDismiss.less";
-@import "elements/buttons.less";
+@import "elements/button.less";
 @import "elements/callout.less";
 @import "elements/checkList.less";
 @import "elements/code.less";
@@ -63,7 +63,7 @@
 @import "elements/headings.less";
 @import "elements/hint.less";
 @import "elements/iconMenu.less";
-@import "elements/icons.less";
+@import "elements/icon.less";
 @import "elements/imgMagnifier.less";
 @import "elements/link.less";
 @import "elements/linkList.less";
@@ -95,6 +95,6 @@
 @import "elements/stepMenu.less";
 @import "elements/stepper.less";
 @import "elements/switch.less";
-@import "elements/tables.less";
+@import "elements/table.less";
 @import "elements/tabs.less";
 @import "elements/tooltip.less";
