--- a/src/less/elements/button.less
+++ b/src/less/elements/button.less
@@ -67,6 +67,12 @@
         color: @color-main-8;
         text-decoration: none;
     }
+    
+    // <input type="submit"> as button
+    
+    & > input[type="submit"] {
+        cursor: pointer;
+    }
 
     // interactive states
 
