--- a/src/less/elements/imgMagnifier.less
+++ b/src/less/elements/imgMagnifier.less
@@ -6,18 +6,13 @@
 .imgMagnifier {
 
     box-sizing: border-box;
+    cursor: zoom-in;
     display: inline-block;
     position: relative;
 
     a {
         display: block;
-    }
-
-    // do not show pointer cursor
-    // when JS is enabled
-
-    .js& a {
-        cursor: default;
+        cursor: zoom-in;
     }
 
 }
@@ -51,6 +46,7 @@
     background: fade(@color-main-10, 20%);
     border: rgba(255,255,255,.3) 1px solid;
     box-sizing: border-box;
+    cursor: move;
     left: 0;
     position: absolute;
     top: 0;
