--- a/src/less/elements/form.less
+++ b/src/less/elements/form.less
@@ -1,230 +1,15 @@
 /** form.less */
 
-// form
-// ====
-
 form {
-    padding: 0;
+    border: 0;
 }
 
-// fieldset
-// ========
-
-fieldset {}
-
-// legend
-// ======
-
-legend {
-    color: @color-main-7;
-    display: block;
-    font: bold 1.5rem/2.5rem @font-sansserif;
-    line-height: 2rem;
-    padding: 0 0 1rem 0;
+fieldset {
+    border: 0;
 }
 
-// label
-// =====
+legend {}
 
-label {
-
+label[for] {
     cursor: pointer;
-    display: block;
-    font: normal 1.3rem/2rem @font-sansserif;
-    position: relative;
-
-    i,
-    em {
-        color: @color-main-15;
-        font-style: normal;
-    }
-
-    // input elements inside a label
-
-    input,
-    textarea,
-    .select {
-        margin-top: .5rem;
-    }
-
-    // input elements following a label
-
-    & + input,
-    & + textarea,
-    & + .select {
-        margin-top: 1rem;
-    }
-
 }
-
-// text inputs
-// ===========
-
-input[type="date"],
-input[type="email"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"],
-textarea {
-
-    .mixin-clearAppearance;
-    .mixin-defaultBorderRadius;
-    background: @color-white;
-    border: @color-main-20 1px solid;
-    box-shadow: 0 1px 0 @color-main-24 inset;
-    box-sizing: border-box;
-    color: @color-main-8;
-    font: normal 1.3rem/2.5rem @font-sansserif;
-    height: 2.5rem;
-    padding: 0 .5rem;
-    width: 100%;
-
-    // interactive states
-
-    &:focus {
-        .mixin-focus;
-    }
-
-    &[disabled],
-    &[readonly] {
-        background: @color-main-25;
-        border: @color-main-22 1px solid;
-        color: @color-main-8;
-        outline: none;
-        padding: 0 .5rem;
-    }
-
-    &[readonly] {
-        border: 0;
-        box-shadow: none;
-        background: transparent;
-    }
-
-}
-
-// large input
-
-input.input--large {
-    font-size: 1.5rem;
-    line-height: 4rem;
-    height: 4rem;
-}
-
-textarea {
-
-    box-sizing: border-box;
-    display: block;
-    height: auto;
-    line-height: 2rem;
-    max-width: 100%;
-    min-height: 10rem;
-    padding: .5rem;
-    resize: vertical;
-
-    &:focus {
-        padding: .4rem;
-    }
-
-}
-
-// large textarea
-
-textarea.input--large {
-    font-size: 1.5rem;
-    height: auto;
-    line-height: 2rem;
-}
-
-// placeholders
-// ============
-
-::-webkit-input-placeholder                { color: @color-main-8; }
-.input--error::-webkit-input-placeholder   { color: @color-negative-8; }
-.input--success::-webkit-input-placeholder { color: @color-positive-8; }
-
-:-moz-placeholder                          { color: @color-main-8; }
-.input--error::-moz-input-placeholder      { color: @color-negative-8; }
-.input--success::-moz-input-placeholder    { color: @color-positive-8; }
-
-// date inputs
-// ===========
-
-[yoi-environment="desktop"] {
-
-    // disable native date pickers
-    // on desktop browsers
-
-    ::-webkit-calendar-picker-indicator {
-        display: none;
-    }
-
-}
-
-// form elements error / success
-// =============================
-
-input[type="date"],
-input[type="email"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"],
-textarea {
-
-    // error
-
-    &.input--error,
-    &.input--error:hover,
-    .input--error & {
-        background: @color-negative-24;
-        border-color: @color-negative-15;
-        box-shadow: 0 1px 0 @color-negative-21 inset;
-        color: @color-negative-8;
-    }
-
-    &.input--error:focus,
-    .input--error &:focus {
-        background: @color-negative-23;
-        border-color: @color-negative-15;
-    }
-
-    // success
-
-    &.input--success,
-    &.input--success:hover,
-    .input--success & {
-        background: @color-positive-24;
-        border-color: @color-positive-15;
-        box-shadow: 0 1px 0 @color-positive-21 inset;
-        color: @color-positive-8;
-    }
-
-    &.input--success:focus,
-    .input--success &:focus {
-        background: @color-positive-23;
-        border-color: @color-positive-15;
-    }
-
-}
-
-// required inputs
-// ===============
-
-input[required] {}
-
-// checkbox & radio buttons
-// ========================
-
-// ---> customCheckbox.less
-// ---> customRadiobutton.less
-
-// submit button
-// =============
-
-// ---> buttons.less
-
-// selects
-// =======
-
-// ---> customSelect.less
