--- a/src/less/index.less
+++ b/src/less/index.less
@@ -97,4 +97,5 @@
 @import "elements/switch.less";
 @import "elements/table.less";
 @import "elements/tabs.less";
+@import "elements/textInputs.less";
 @import "elements/tooltip.less";
