--- a/src/less/utilities/interaction.less
+++ b/src/less/utilities/interaction.less
@@ -86,10 +86,10 @@
 .hvr-opacity-2:hover    { opacity: .2 !important; }
 .hvr-opacity-1:hover    { opacity: .1 !important; }
 
-// general focus classes
+// tab focus classes
 
-.focus       { .mixin-focus() !important; }
-.focus-inset { .mixin-focus-inset() !important; }
+.tabFocus       { .mixin-tabFocus() !important; }
+.tabFocus-inset { .mixin-tabFocus-inset() !important; }
 
 // transitions
 // ===========
