--- a/src/less/core/mixins.less
+++ b/src/less/core/mixins.less
@@ -53,7 +53,7 @@
     border-radius: (@borderRadius * 1px);
 }
 
-.mixin-focus() {
+.mixin-tabFocus() {
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-name: customFocus;
@@ -65,7 +65,7 @@
     outline-width: 0.2rem;
 }
 
-.mixin-focus-inset() {
+.mixin-tabFocus-inset() {
     box-shadow:
         inset 2px 0 0 @focusColor,
         inset 0 2px 0 @focusColor,
