--- a/src/less/elements/ratingInput.less
+++ b/src/less/elements/ratingInput.less
@@ -35,73 +35,28 @@
 // =========
 
 .ratingInput--rated-1 {
-
     .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-
-    &:hover {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-    }
-
+    &:hover .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
 }
 
 .ratingInput--rated-2 {
-
-    .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-
-    &:hover {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-    }
-
+    .ratingInput__star:nth-child(-n + 2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
+    &:hover .ratingInput__star:nth-child(-n + 2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
 }
 
 .ratingInput--rated-3 {
-
-    .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-
-    &:hover {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-    }
-
+    .ratingInput__star:nth-child(-n + 3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
+    &:hover .ratingInput__star:nth-child(-n + 3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
 }
 
 .ratingInput--rated-4 {
-
-    .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-
-    &:hover {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-    }
-
+    .ratingInput__star:nth-child(-n + 4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
+    &:hover .ratingInput__star:nth-child(-n + 4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
 }
 
 .ratingInput--rated-5 {
-
-    .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-    .ratingInput__star:nth-child(5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
-
-    &:hover {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-        .ratingInput__star:nth-child(5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
-    }
-
+    .ratingInput__star { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-13); }
+    &:hover .ratingInput__star { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-5); }
 }
 
 // locked state
@@ -117,44 +72,28 @@
         color: transparent;
     }
 
-    &.ratingInput--rated-1 {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
-        .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
-        .ratingInput__star:nth-child(5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
+    &.ratingInput--rated-1, &.ratingInput--rated-1:hover {
+        .ratingInput__star { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
+        .ratingInput__star:nth-child(n + 2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
     }
 
-    &.ratingInput--rated-2 {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
-        .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
-        .ratingInput__star:nth-child(5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
+    &.ratingInput--rated-2, &.ratingInput--rated-2:hover {
+        .ratingInput__star { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
+        .ratingInput__star:nth-child(n + 3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
     }
 
-    &.ratingInput--rated-3 {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
-        .ratingInput__star:nth-child(5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
+    &.ratingInput--rated-3, &.ratingInput--rated-3:hover {
+        .ratingInput__star { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
+        .ratingInput__star:nth-child(n + 4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
     }
 
-    &.ratingInput--rated-4 {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
+    &.ratingInput--rated-4, &.ratingInput--rated-4:hover {
+        .ratingInput__star { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
+        .ratingInput__star:nth-child(n + 5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-main-23); }
     }
 
-    &.ratingInput--rated-5 {
-        .ratingInput__star:nth-child(1) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(2) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(3) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(4) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
-        .ratingInput__star:nth-child(5) { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
+    &.ratingInput--rated-5, &.ratingInput--rated-5:hover {
+        .ratingInput__star { .mixin-icon-bg(@id: 'icon-039-s', @fillColor: @color-gold); }
     }
 
 }
