--- a/src/less/elements/article.less
+++ b/src/less/elements/article.less
@@ -11,7 +11,7 @@
     
     // adjecent headlines and paragraphs
     
-    > h3, > h4, > h5, > h6 {
+    > h2, > h3, > h4, > h5, > h6 {
         & + p {
             margin-top: 0;
         }
@@ -76,9 +76,9 @@
 
     }
     
-    // notes
+    // hints
     
-    > .note {
+    > .hint {
         @verticalRhythm();
     }
     
@@ -88,6 +88,12 @@
         border-left: @color-main-22 2px solid;
         font-style: italic;
         padding-left: 2.5rem;
+    }
+    
+    // code examples
+    
+    > .code__example {
+        @verticalRhythm();
     }
 
 }
