--- a/src/less/theme/typography.less
+++ b/src/less/theme/typography.less
@@ -18,8 +18,8 @@
 // ===============
 
 @verticalMargin: {
-    margin-bottom: 2rem;
-    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+    margin-top: 4rem;
 };
 
 @verticalRhythm: {
@@ -44,21 +44,21 @@
 // ========
 
 @h1: {
-    font-weight: bold;
     font-family: @font-sansserif;
     font-size: 4rem;
+    font-weight: normal;
 };
 
 @h2: {
-    font-weight: bold;
     font-family: @font-sansserif;
     font-size: 2.5rem;
+    font-weight: normal;
 };
 
 @h3: {
-    font-weight: bold;
     font-family: @font-sansserif;
     font-size: 2rem;
+    font-weight: normal;
 };
 
 @h4: {
