--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -13,8 +13,18 @@
     <body class="noJs" yoi-environment="desktop" yoi-pagerewind>
         <script>document.body.className='js';</script>
         <header class="h-20 m-tb-4 b-b">
-            <div class="center grid-float">
-                <img class="d-blk w-10 h-20" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
+            <div class="center">
+                <div class="grid-float">
+                    <div class="w-1-4">
+                        <img class="d-blk w-10 h-20" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
+                    </div>
+                    <div class="w-2-4">
+                        <p class="m-t-18 fs-20 tc-main-15">YOI – the Yoshino Interface Component Library</p>
+                    </div>
+                    <div class="w-1-4 al-r">
+                        <a class="btn btn--flat btn--light" href="#">Github</a>
+                    </div>
+                </div>
             </div>
         </header>
         <div class="center grid-float">
@@ -26,7 +36,7 @@
             </article>
         </div>
         <footer class="center grid-float tc-gray-18 m-tb-15">
-            <div class="w-1-2">YOI – the Yoshino Component Library.</div>
+            <div class="w-1-2">YOI – the Yoshino Interface Component Library.</div>
             <div class="w-1-2 al-r">&copy; Yoshino.digital GmbH</div>
         </footer>
         <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
@@ -34,3 +44,16 @@
         <script src="{{ site.github.url }}/assets/js/yoi.js"></script>
     </body>
 </html>
+
+
+<!--
+    <div class="w-1-4 bg-green-25">
+        <img class="d-blk w-10 h-20" src="{{ site.github.url }}/assets/img/yoi-logo.svg" />
+    </div>
+    <div class="w-2-4 bg-blue-25">
+        <p class="m-t-18 fs-20 tc-main-15">YOI – the Yoshino Interface Component Library</p>
+    </div>
+    <div class="w-1-4 bg-red-25">
+        <p>yoyo</p>
+    </div>
+-->
