--- a/docs/_includes/menu-sub.html
+++ b/docs/_includes/menu-sub.html
@@ -2,13 +2,16 @@
 <ul class="linkList linkList--large bg-transparent b-0 br-0">
     {% for group in site.data.sitemap %}
         <li class="linkList__item">
-            <a class="linkList__link tc-purple-11 fw-bold" href="{{ site.github.url }}/{{ group.first }}/">{{ group.first | capitalize }}</a>
+            <a class="linkList__link fw-bold" href="{{ site.github.url }}/{{ group.first }}/">{{ group.first | capitalize }}</a>
         </li>
         {% if page.group == group.first %}
             {% for pageName in site.data.sitemap[page.group] %}
-                {% assign pageNameLowerCase = pageName | downcase %}
-                <li class="linkList__item{% if (page.url contains pageNameLowerCase) or (urlLastChar == "/" and pageNameLowerCase == "index") %} is--active{% endif %}">
-                    <a class="linkList__link" href="{{ site.github.url }}/{{ page.group }}/{{ pageNameLowerCase }}.html">{% if pageNameLowerCase == "index" %}Introduction{% else %}{{ pageName | replace: "_", " " | capitalize }}{% endif %}</a>
+                {% assign menuLabel    = pageName | replace: "_", " " %}
+                {% assign currentPage  = page.url | split: "/" | last | replace: "_", " " %}
+                {% assign thisPageName = menuLabel | downcase %}
+                <li class="linkList__item{% if (currentPage == thisPageName) or (urlLastChar == "/" and menuLabel contains "index") %} is--active{% endif %}">
+                    <a class="linkList__link tt-cp" href="{{ site.github.url }}/{{ page.group }}/{{ pageName }}.html">{% if menuLabel contains "index" %}Introduction{% else %}{{ menuLabel }}{% endif %}
+                    </a>
                 </li>
             {% endfor %}
         {% endif %}
