--- a/src/less/utilities/grid.less
+++ b/src/less/utilities/grid.less
@@ -15,10 +15,15 @@
     .w-1-5,
     .w-1-6,
     .w-2-3,
+    .w-2-4,
     .w-2-5,
+    .w-2-6,
     .w-3-4,
     .w-3-5,
-    .w-4-5 {
+    .w-3-6,
+    .w-4-5,
+    .w-4-6,
+    .w-5-6 {
         display: inline-block;
     }
 
@@ -39,10 +44,15 @@
     .w-1-5,
     .w-1-6,
     .w-2-3,
+    .w-2-4,
     .w-2-5,
+    .w-2-6,
     .w-3-4,
     .w-3-5,
-    .w-4-5 {
+    .w-3-6,
+    .w-4-5,
+    .w-4-6,
+    .w-5-6 {
         float: left;
     }
 
@@ -63,10 +73,15 @@
     .w-1-5,
     .w-1-6,
     .w-2-3,
+    .w-2-4,
     .w-2-5,
+    .w-2-6,
     .w-3-4,
     .w-3-5,
-    .w-4-5 {
+    .w-3-6,
+    .w-4-5,
+    .w-4-6,
+    .w-5-6 {
         display: flex;
         flex-direction: column;
     }
@@ -93,10 +108,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             vertical-align: bottom;
         }
     }
@@ -110,10 +130,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             vertical-align: middle;
         }
     }
@@ -127,10 +152,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             vertical-align: baseline;
         }
     }
@@ -146,10 +176,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             vertical-align: bottom;
         }
     }
@@ -194,10 +229,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             text-align: left;
             text-align: start;
             text-align: initial;
@@ -224,10 +264,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             text-align: left;
             text-align: start;
             text-align: initial;
@@ -251,10 +296,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             text-align: left;
             text-align: start;
             text-align: initial;
@@ -278,10 +328,15 @@
         .w-1-5,
         .w-1-6,
         .w-2-3,
+        .w-2-4,
         .w-2-5,
+        .w-2-6,
         .w-3-4,
         .w-3-5,
-        .w-4-5 {
+        .w-3-6,
+        .w-4-5,
+        .w-4-6,
+        .w-5-6 {
             text-align: left;
             text-align: start;
             text-align: initial;
