--- a/src/less/utilities/layout.less
+++ b/src/less/utilities/layout.less
@@ -72,16 +72,17 @@
 }
 
 .w-1-1 { width: 100%; }
-.w-1-2 { width: 50%; }
+.w-1-2, .w-2-4, .w-3-6 { width: 50%; }
 .w-1-3 { width: 33.3%; }
 .w-1-4 { width: 25%; }
 .w-1-5 { width: 20%; }
 .w-1-6 { width: 16.6%; }
-.w-2-3 { width: 66.6%; }
+.w-2-3, .w-4-6 { width: 66.6%; }
 .w-2-5 { width: 40%; }
 .w-3-4 { width: 75%; }
 .w-3-5 { width: 60%; }
 .w-4-5 { width: 80%; }
+.w-5-6 { width: 83.3%; }
 
 // auto width
 
